--- a/client/app/app.component.scss
+++ b/client/app/app.component.scss
@@ -1,5 +1,6 @@
 .body {
   height: 100%;
   width: 100%;
+  min-width: 100%;
   position: relative;
 }
